--- a/HWCoding BootCamp/Week 3/Psychic-Game/index.html
+++ b/HWCoding BootCamp/Week 3/Psychic-Game/index.html
@@ -17,11 +17,16 @@
 <p>Guess my letter</p>
 
 <br><br>
-
+<div>**************************************</div>
 <div id="wintitle"> </div> <div id="wins"> </div>
 <div id="losstitle"> </div> <div id="losses"> </div>
 <div id="guesslefttitle"> </div> <div id="guessesleft"> </div>
+
+<div>**************************************</div>
 <div id="guessessofartitle"> </div> <div id="userGuess"> </div>
+
+<img src="assets\images\wallpaper.jpg" width="400">
+
 
 <script src="assets/javascript/javascript.js">
 </script>
